feat: support confirmed deletion of enterprise plugins and versions
